--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">AsystentNayczyciela</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="welcome">Pomocnik nauczyciela</string>
+    <string name="student">Student</string>
+    <string name="nauczyciel">Nauczyciel</string>
+    <string name="wybierzStudenta">Wybierz Studenta</string>
+    <string name="wybierz">Wybierz</string>
+    <string name="add">Add</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
+    <string name="wybierzNauczyciela">Wybierz nauczyciela</string>
+    <string name="studentLastName">Nazwisko</string>
+    <string name="studentName">Imię</string>
 </resources>
